--- a/2-Computer-Systems/problems/3-Beep-Beep-Boop/plan.mkd
+++ b/2-Computer-Systems/problems/3-Beep-Beep-Boop/plan.mkd
@@ -3,3 +3,7 @@
 The goal is to create a terminal program that will take unbuffered/raw number key presses and trigger the ASCII bell sound the corresponding number of times. All other key presses should have no effect, though SIGINT (^C on MacOSX) should ideally terminate the program.
 
 A key requirement in the project description is to 'not bork the terminal' after termination. This implies that writing to a tty file might be a means of triggering the bell sound... On the other hand, if the tty directory simply outputs to STDOUT, perhaps interacting with these process streams directly within node would be a safer and smarter choice.
+
+## Findings around the ASCII Bell
+
+As highlighted in the intro video, the ASCII Bell is a special character encoded as 0x07. In tty terminals, it seems the special characters are yielded when you press control plus the corresponding letter whose position in the alphabet matches the character encoding. So pressing ^G in the terminal triggers the bell sound.
