--- a/2-Computer-Systems/problems/4-Image-Rotate/plan.mkd
+++ b/2-Computer-Systems/problems/4-Image-Rotate/plan.mkd
@@ -24,3 +24,8 @@ The following format string yields the the signature, dimensions and pixel-array
 1/2 "Signature: %02X\n" 1/4 "File Size: %04u\n" /4 "Reserved: %04X\n" /4 "Pixel-array offset: %4u\n" /4 "Header bytes: %4u\n" "Dimensions: %4u x %4u \n" 
 
 ```
+
+The pixels are stored as an array starting at the byte-offset. The rows and columns can be determined by the image dimensions. The format specifies a bits per pixel value which determines the overall size of the pixel array (and bytes per row, etc.). Confusingly (or otherwise), each row has padding of up to 3 bytes to ensure the rows are multiples of 4 bytes. But it's worth noting that the initial helpfile example would indeed have rows that are multiples of 4 (420 * 3 bpp = 1260 = 315 * 4). 
+
+There's also an image size entry in the header which would yield the required size of your pixel buffer in bytes, presumably.
+
